[project]
name = "wadoh-subtyping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Frank Aragona", email = "92396451+DOH-FAA3303@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "wadoh-raccoon",
]

[project.scripts]
wadoh-subtyping = "wadoh_subtyping:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.uv.sources]
wadoh-raccoon = { git = "https://github.com/NW-PaGe/wadoh_raccoon.git", rev = "feature/shig-fuzzy-tests" }
