[project]
name = "wadoh-subtyping"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Frank Aragona", email = "92396451+DOH-FAA3303@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "wadoh-raccoon",
]

[project.scripts]
wadoh-subtyping = "wadoh_subtyping:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "pytest>=8.4.1",
    "quartodoc>=0.11.1",
]
internal = [
    "wadoh-raccoon",
]

[tool.uv.sources]
wadoh-raccoon = { git = "https://github.com/NW-PaGe/wadoh_raccoon", rev = "feature/shig-fuzzy-tests" }
