[project]
name = "wadoh-subtyping"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Frank Aragona", email = "92396451+DOH-FAA3303@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.113.0",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "pycap>=2.7.0",
    "sparkpl>=2.0.1",
    "wadoh-raccoon>=0.4.3",
]

[project.scripts]
wadoh-subtyping = "wadoh_subtyping:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "pytest>=8.4.1",
    "quartodoc>=0.11.1",
]
